edit swarger docs
