# routes/api.php
@@ -5,9 +5,9 @@ use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 
-Route::apiResource('skills',SkillController::class);
 
 Route::middleware(['auth:sanctum','admin'])->group(function(){
+    Route::apiResource('skills',SkillController::class);
     Route::post('logout',[UserController::class,'logout']);
     Route::get('user',[UserController::class,'user']);
 });
